--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SimpleLightbox library</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.12.1/simple-lightbox.min.css" integrity="sha512-q+OxwGn5fQc6oIdj3NQgTVMgS9TCLksZp5DsdSEsZbGamjdN7yVAMah+R1DmHZykkHD5gI8imeuEfmkp7ZHZ3w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -13,7 +14,9 @@
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
-
+    <script src="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+    "></script>
     <script src="js/02-lightbox.js" type="module"></script>
   </body>
 </html>
