--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -14,9 +14,8 @@
 
     <!-- Add gallery items to this list -->
     <ul class="gallery"></ul>
-    <script src="
-    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-    "></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.12.1/simple-lightbox.min.js" integrity="sha512-QoopN2y0b53eP+J2BNc1ff4ImedQAt2xDdhLQkUzTCyfniKkUlHbhweoYxDhCY78Z5EnMtY5rLtjtTK0Yc9Jcw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/02-lightbox.js" type="module"></script>
   </body>
 </html>
